--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(GameEdu)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(GameEdu main.cpp)
+add_executable(GameEdu main.cpp
+        character.h
+        character.cpp)
 
 set(CMAKE_EXE_LINKER_FLAGS "-static")
