Finished rest of upgade stats, added arena mechanism

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(GameEdu main.cpp
         character.h
-        character.cpp)
+        character.cpp
+        arena.h
+        arena.cpp)
 
 set(CMAKE_EXE_LINKER_FLAGS "-static")
