--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,8 @@ add_executable(GameEdu main.cpp
         tavern.cpp
         tavern.h
         question.h
-        question.cpp)
+        question.cpp
+        story.cpp
+        story.h)
 
 set(CMAKE_EXE_LINKER_FLAGS "-static")
